# Broadcast-Name-Resolver

./: CMakeLists.txt  README.md  component.mk
client/: CMakeLists.txt  main.cpp
include/bnr/: client.hpp  server.hpp
include/bnr/detail/: data.hpp
server/: CMakeLists.txt  main.cpp
src/: client.cpp  detail_data.cpp  server.cpp
